--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,13 @@
+nav { background-color: black;}
+
+.navbar a {
+
+    color:white  ;
+}
+
+
+.navbar a:hover {color: #1e7e34;}
+
 * {
     padding: 0;
     margin: 0; }
@@ -17,7 +27,7 @@ body { background-color: black }
 }
 .btn {
     margin-right: 10px;
-    color: #005cbf;
+
 
 }
 
