--- a/styles/delivery.css
+++ b/styles/delivery.css
@@ -36,23 +36,61 @@ footer a img{ margin-right: 450px;
 }
 
 .delivery_central_container {
-    background-image: url("../images/image2.jpg");
+    background-image: url("../images/rec.jpg");
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    color: white;
+    color: black;
 
 }
 
-/*input { margin: 0 100px; }*/
+.delivery_inputs input { margin-top: 41px;  width: 100%; border-radius: 100px; background-color: transparent; border: solid 1px black;}
 
-.delivery_central_container p {
-    display: inline-block;
-    /*margin: 10px 50px;*/
-}
+.delivery_signs p {margin-top: 42px; }
 
-input {display: inline-block;
-}
+.delivery_signs {margin-bottom: 30px; }
+
+.delivery_inputs select { margin-top:41px; width: 100%; background-color: transparent; border: solid 1px black;  }
+
+.third_column {margin-top: 30px;}
+
+h3 { padding-top: 30px;}
+
+h4  { padding-top: 15px;}
+
+i {padding-top: 40px; padding-bottom: 40px; }
+
+.bottom_sign {color: black; margin-top: 10px; font-weight: 900; font-size: 30px; background-color: white;}
+
+
+
+
+
+
+/*.delivery_central_container p {*/
+/*    display: inline-block;*/
+/*    !*margin: 10px 50px;*!*/
+/*}*/
+
+/*input {display: inline-block;*/
+/*}*/
+
+/*.approximate_cost_sign {*/
+/*    margin-right: 100px;*/
+/*}*/
+
+/*.cost_delivery_sign {*/
+/*    margin-left: 100px;*/
+/*}*/
+
+
+
+
+
+
+
+
+
 
 /*.name_sign {position: absolute;*/
 /*right: 1029px;*/
