--- a/styles/recognize_products.css
+++ b/styles/recognize_products.css
@@ -34,7 +34,8 @@ footer a img{ margin-right: 450px;
 .recognize_central_container {
     padding-top: 100px;
     padding-bottom: 100px   ;
-    background-image: url("../images/image2.jpg");
+    background-image: url("../images/recognize.jpg");
+
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
