--- a/styles/delivery.css
+++ b/styles/delivery.css
@@ -1,4 +1,5 @@
 nav { background-color: black;}
+
 * {
     padding: 0;
     margin: 0; }
@@ -12,7 +13,6 @@ nav { background-color: black;}
 .img_logo{
     width: 250px;
     margin-right: 600px;
-
 
 }
 
@@ -60,7 +60,7 @@ h4  { padding-top: 15px;}
 
 i {padding-top: 40px; padding-bottom: 40px; }
 
-.bottom_sign {color: black; margin-top: 10px; font-weight: 900; font-size: 30px; background-color: white;}
+.bottom_sign {color: black; margin-top: 10px; font-weight: 900; font-size: 30px; background-color: white; padding: 50px 0}
 
 
 
